--- a/templates/post.html
+++ b/templates/post.html
@@ -17,8 +17,9 @@
 </head>
 
 <body>
+    <a class="back" href="/"> . . </a>
     <header>
-        <h1>{{ title }}</h1>
+        <h1>title: {{ title }}</h1>
         <h3>date: {{ date }}</h3>
     </header>
 
